--- a/graphs/main/templates/main/index.html
+++ b/graphs/main/templates/main/index.html
@@ -13,37 +13,38 @@
 </head>
 <body>
     <h1>Введите количество состояний в графе (вершин)</h1>
+    <form method="post">
+        {% csrf_token %}
+        <div class="range">
+            {{ form.count }}
+            <datalist id="tickmarks">
+                <option value="1" label="1">
+                <option value="2">
+                <option value="3">
+                <option value="4">
+                <option value="5" label="5">
+                <option value="6">
+                <option value="7">
+                <option value="8">
+                <option value="9">
+                <option value="10" label="10">
+                <option value="11">
+                <option value="12">
+                <option value="13">
+                <option value="14">
+                <option value="15" label="15">
+                <option value="16">
+                <option value="17">
+                <option value="18">
+                <option value="19">
+                <option value="20" label="20">
+            </datalist>
+        </div>
 
-    <div class="range">
-        <input type="range" min="1" max="20" value="5" step="1" list="tickmarks"/>
-        <datalist id="tickmarks">
-            <option value="1" label="1">
-            <option value="2">
-            <option value="3">
-            <option value="4">
-            <option value="5" label="5">
-            <option value="6">
-            <option value="7">
-            <option value="8">
-            <option value="9">
-            <option value="10" label="10">
-            <option value="11">
-            <option value="12">
-            <option value="13">
-            <option value="14">
-            <option value="15" label="15">
-            <option value="16">
-            <option value="17">
-            <option value="18">
-            <option value="19">
-            <option value="20" label="20">
-        </datalist>
-    </div>
-
-    <a class="teleport" href="params"><button class="button" data-text="Awesome">
-        <span class="actual-text">&nbsp;далее&nbsp;</span>
-        <span aria-hidden="true" class="hover-text">&nbsp;далее&nbsp;</span>
-    </button></a>
-
+        <!--<a class="teleport" href="params">--><button class="button" data-text="Awesome" type="submit">
+            <span class="actual-text">&nbsp;далее&nbsp;</span>
+            <span aria-hidden="true" class="hover-text">&nbsp;далее&nbsp;</span>
+        </button><!--</a>-->
+    </form>
 </body>
 </html>
