--- a/graphs/main/templates/main/param.html
+++ b/graphs/main/templates/main/param.html
@@ -8,18 +8,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Graphs</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="{% static 'main/params.css' %}">
+    <link rel="stylesheet" href="{% static 'main/param.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 </head>
 <body>
     <div class="hat">
         <select name="tops_setting" id="tops_setting">
-            <option disabled selected hidden>Укажите вершину</option>
+            <!--
             {% for el in count %}
-
-                <option value="{{ el.num }}"><a href="{% url 'param' el.id %}">{{ el.name }}</a></option>
+                <option value="{{ el.num }}">{{ el.name }}</option>
             {% endfor %}
+            -->
+            <option value="{{ name.num }}">{{ name.name }}</option>
         </select>
         <p class="title">Настройка параметров вершин</p>
         <a class="teleport" href="visual"><button class="draw">Визуализировать</button></a>
@@ -30,15 +31,15 @@
 
         <div class="name">
             <p class="title">Название вершины:</p>
-            {{ form_name.name }}
+            <!--{{ form_name.name }}-->
+            {{ name.name }}
             <button class="change" type="submit">Изменить</button>
-
 
         </div>
 
         <div class="dangerous">
             <p class="title">Опасное состояние:</p>
-
+            <p>{{ name.dangerous }}</p>
         </div>
     </form>
 
@@ -46,6 +47,24 @@
         <tr>
             <td><p class="title">Входящие рёбра:</p></td>
             <td><p class="title">Выходящие рёбра:</p></td>
+        </tr>
+
+        <tr>
+            <td>
+                <div class="in_div">
+                    <select name="incoming" class="incoming">
+                        <!--
+                        {% for el in count %}
+                            <option value="{{ el.num }}">{{ el.name }}</option>
+                        {% endfor %}
+                        -->
+                    </select>
+                    <input type="number" placeholder="Вес" class="weight">
+                </div>
+            </td>
+            <td>
+
+            </td>
         </tr>
 
         <tr>
