--- a/graphs/main/static/main/params.css
+++ b/graphs/main/static/main/params.css
@@ -149,7 +149,10 @@
     margin-right: 20px;
 }
 
-table {
+.table_edges {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     width: 50%;
     height: 50%;
     border: 2px solid #000;
@@ -157,19 +160,26 @@ table {
     margin-top: 20px;
 }
 
-table tr td {
-    border-right: 1px solid #000;
-    border-left: 1px solid #000;
+.table_edges .in {
+    border-right: .5px solid #000;
+}
+
+.table_edges .out {
+    border-left: .5px solid #000;
+}
+
+.table_edges .in, .table_edges .out {
+    width: 50%;
     padding-left: 5px;
 }
 
-table tr td .title {
+.table_edges .in .title, .table_edges .out .title {
     font-size: 25px;
     font-weight: 500;
     margin: 0;
 }
 
-table tr td #incoming_edge, table tr td #outgoing_edge {
+.table_edges .in #incoming_edge, .table_edges .out #outgoing_edge {
     margin-top: 20px;
     margin-bottom: 10px;
     background-color: #fff;
@@ -177,18 +187,19 @@ table tr td #incoming_edge, table tr td #outgoing_edge {
     border: 2px solid #000;
 }
 
-table tr td #incoming_edge:hover, table tr td #outgoing_edge:hover {
+.table_edges .in #incoming_edge:hover, .table_edges .out #outgoing_edge:hover {
     background-color: rgba(0, 0, 0, .2);
     box-shadow: 3px 3px 1px 1px rgba(0, 0, 0, .4);
     transition: .5s;
 }
 
-table tr td .in_div {
+.table_edges .in_div {
     display: flex;
     flex-direction: row;
+    margin-top: 10px;
 }
 
-table tr td .in_div .incoming {
+.table_edges .in_div .incoming, .table_edges .in_div .outgoing {
     height: auto;
     background-color: rgba(0, 0, 0, 0.3);
     color: #000;
@@ -201,32 +212,32 @@ table tr td .in_div .incoming {
     padding: 1px 6px;
 }
 
-table tr td .in_div .incoming:hover {
+.table_edges .in_div .incoming:hover, .table_edges .in_div .outgoing:hover {
     cursor: pointer;
 }
 
-table tr td .in_div .incoming option {
+.table_edges .in_div .incoming option, .table_edges .in_div .outgoing option {
     background-color: #fff;
 }
 
-table tr td .in_div .incoming option:checked {
+.table_edges .in_div .incoming option:checked, .table_edges .in_div .outgoing option:checked {
     background-color: rgba(0, 0, 0, 0.3);
     color: #000;
 }
 
-table tr td .in_div .incoming option:hover {
+.table_edges .in_div .incoming option:hover, .table_edges .in_div .outgoing option:hover {
     background-color: #fff;
     color: #ff0000;
 }
 
-table tr td .in_div .weight {
+.table_edges .in_div .weight {
     height: auto;
     width: 50%;
     font-size: 17px;
     background-color: #ffffff;
 }
 
-table tr td .in_div .weight:hover, table tr td .in_div .weight:focus {
+.table_edges .in_div .weight:hover, .table_edges .in_div .weight:focus {
     border: 2px solid #000;
     background-color: rgba(0, 0, 0, .2);
     font-size: 17px;
