--- a/graphs/main/templates/main/params.html
+++ b/graphs/main/templates/main/params.html
@@ -7,6 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Graphs</title>
+    <script src="{% static 'main/params.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="{% static 'main/params.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
@@ -41,20 +42,22 @@
         </div>
     </form>
 
-    <table>
-        <tr>
-            <td><p class="title">Входящие рёбра:</p></td>
-            <td><p class="title">Выходящие рёбра:</p></td>
-        </tr>
+    <div class="table_edges">
+        <div class="in">
+            <p class="title">Входящие рёбра:</p>
+            <div id="all_in_div_in">
 
-        <tr>
-            <td>
-                <button id="incoming_edge">Добавить</button>
-            </td>
-            <td>
-                <button id="outgoing_edge">Добавить</button>
-            </td>
-        </tr>
-    </table>
+            </div>
+            <button id="incoming_edge" onclick="addRow_in()">Добавить</button>
+        </div>
+
+        <div class="out">
+            <p class="title">Выходящие рёбра:</p>
+            <div id="all_in_div_out">
+
+            </div>
+            <button id="outgoing_edge" onclick="addRow_out()">Добавить</button>
+        </div>
+    </div>
 </body>
 </html>
